<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPTHostDemo</string>
    <string name="action_settings">Settings</string>
    <string name="scan_load_plugin">扫描加载插件</string>
    <string name="remote_call">Remote Call</string>
    <string name="test_receiver">Test Receiver</string>
    <string name="get_context">Get Context</string>
    <string name="hook_compare">Hook类方法对比</string>
    <string name="androidp_compare">Android P 类方法调用测试</string>
</resources>